[package]
name = "code-editor"
version = "0.0.0"
description = "A lightweight desktop code editor"
authors = ["Author"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog", "path", "shell", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1.0"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
uuid = { version = "1.6", features = ["v4"] }
lazy_static = "1.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
